test/invalid/CannotCastFromString2Integer/CannotCastFromString2Integer.plume

/**
 *
 * @author 37029, Juliana Franco
 *
 */
class CannotCastFromString2Integer extends Object is

  method main : () -> String is
    (Integer)"abc"